# vectorscan-benchmark

./: .clang-format  CMakeLists.txt  main.cpp  test.cpp
